# OmniOperator

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILDING.MD  CMakeLists.txt  README.MD  README.en.md  README.md  README_en.md  build.sh  env_check.sh  pom.xml
core/: CMakeLists.txt  build.sh  config.h  config.h.in  libconfig.cpp  libconfig.h
core/secDTFuzz/: Dockerfile_build  Dockerfile_run  SecDTFuzz.yaml  build.sh
core/src/: CMakeLists.txt  README.MD  build.sh
core/src/codegen/: CMakeLists.txt  CodeGenValue.h  KllSketch-inl.h  KllSketch.cpp  KllSketch.h  Options.h  ScanSpec.h  batch_codegen_context.h  batch_expression_codegen.cpp  batch_expression_codegen.h  batch_filter_codegen.cpp  batch_filter_codegen.h  batch_func_registry_datetime.cpp  batch_func_registry_datetime.h  batch_func_registry_decimal.cpp  batch_func_registry_decimal.h  batch_func_registry_dictionary.cpp  batch_func_registry_dictionary.h  batch_func_registry_hash.cpp  batch_func_registry_hash.h  batch_func_registry_math.cpp  batch_func_registry_math.h  batch_func_registry_string.cpp  batch_func_registry_string.h  batch_func_registry_util.cpp  batch_func_registry_util.h  batch_func_registry_varchar_vector.cpp  batch_func_registry_varchar_vector.h  batch_projection_codegen.cpp  batch_projection_codegen.h  bias_correction.cpp  bias_correction.h  bloom_filter.cpp  bloom_filter.h  codegen_base.cpp  codegen_base.h  codegen_context.h  codegen_utils.cpp  codegen_utils.h  codegen_value.h  (+69 more)
core/src/common/: CMakeLists.txt  README.md  datatype.cpp  datatype.h  expr_printer.cpp  expr_printer.h  expr_visitor.cpp  expr_visitor.h  expressions.cpp  expressions.h  parserhelper.cpp  parserhelper.h
core/src/compute/: CMakeLists.txt  ColumnarBatchIterator.h  ResultIterator.cpp  ResultIterator.h  cpuWall_timer.cpp  cpuWall_timer.h  driver.cpp  driver.h  local_planner.cpp  local_planner.h  operator_stats.h  pipeline_stats.h  plannode_stats.cpp  plannode_stats.h  process_base.cpp  process_base.h  reason.h  task.cpp  task.h  task_stats.h
core/src/connectors/: CMakeLists.txt  Connector.cpp  Connector.h  Split.h
core/src/cpu_checker/: CMakeLists.txt  omniruntime_cpu_checker.cpp  omniruntime_cpu_checker.h
core/src/expression/: CMakeLists.txt  HiveTypeParser.cpp  HiveTypeParser.h  README.md  expr_printer.cpp  expr_printer.h  expr_verifier.cpp  expr_verifier.h  expr_visitor.cpp  expr_visitor.h  expressions.cpp  expressions.h  parserhelper.cpp  parserhelper.h
core/src/functions/: CMakeLists.txt  README.md  common.h  context_helper.cpp  context_helper.h  decimalfunctions.cpp  dictionaryfunctions.cpp  externalfunctions.cpp  get_precompiled_functions.sh  mathfunctions.cpp  murmur3_hash.cpp  murmur3_hash.h  stringfunctions.cpp  varcharVectorfunctions.cpp
core/src/io/: CMakeLists.txt  ColumnWriter.cc  ColumnWriter.hh  Common.hh  Compression.cc  Compression.hh  Decompression.cc  Decompression.hh  MemoryPool.cc  MemoryPool.hh  OutputStream.cc  OutputStream.hh  SparkFile.cc  SparkFile.hh  WriterOptions.cc  WriterOptions.hh
core/src/jit/: CMakeLists.txt  README.MD  annotation.h  build.sh  config.cpp  config.h  context.h  hammer.cpp  hammer.h  hammer_config.cpp  hammer_config.h  hammer_test.cpp  harden_config_test.cpp  harden_optimizer.cpp  harden_optimizer.h  jit.cpp  jit.h  omni_jit_config_test.cpp  omni_jit_test.cpp  param_value.h  perf_test.cpp  sort_hammer.cpp  sort_hammer.h  specialization.cpp  specialization.h
core/src/jit_context/: CMakeLists.txt  jit_context.cpp  jit_context.h
core/src/jni/: CMakeLists.txt  api.cpp  api.h  jni_common_def.cpp  jni_common_def.h  jni_constants.cpp  jni_constants.h  jni_operator.cpp  jni_operator.h  jni_operator_factory.cpp  jni_operator_factory.h  jni_vector.cpp  jni_vector.h  jni_vector_loader.cpp  jni_vector_loader.h  nova_hetu_omnicache_runtime_JniWrapper.cpp  nova_hetu_omnicache_runtime_JniWrapper.h  sort_api.cpp  sort_api.h
core/src/memory/: CMakeLists.txt  aligned_buffer.h  allocator.h  base_allocator.cpp  base_allocator.h  chunk.cpp  chunk.h  memory_manager.cpp  memory_manager.h  memory_manager_allocator.h  memory_pool.cpp  memory_pool.h  memory_statistic.cpp  memory_statistic.h  memory_trace.cpp  memory_trace.h  simple_arena_allocator.h  thread_memory_manager.cpp  thread_memory_manager.h  thread_memory_trace.cpp  thread_memory_trace.h
core/src/metrics/: metrics.h  metrics_config.h  metrics_memory_info.h  metrics_row_counter.h  metrics_spill_info.h  omni_metrics.h
core/src/operator/: CMakeLists.txt  build-ir.sh  execution_context.cpp  execution_context.h  hash_util.cpp  hash_util.h  hmpp_hash_util.cpp  hmpp_hash_util.h  memory_builder.h  native_base.h  neon_sort64.h  omni_id_type_vector_traits.h  omni_operator.h  omni_operator_factory.h  op_template.h  operator.h  operator_factory.h  optimization.h  pages_hash_strategy.cpp  pages_hash_strategy.h  pages_index.cpp  pages_index.h  quick_sort_simd.cpp  quick_sort_simd.h  radix_sort.h  small_case_sort_simd.cpp  small_case_sort_simd.h  status.h  test.cpp
core/src/plannode/: CMakeLists.txt  RowVectorStream.h  planFragment.cpp  planFragment.h  planNode.cpp  planNode.h
core/src/reader/: BufferInput.cpp  BufferInput.h  CMakeLists.txt  Reader.cpp  Reader.h  ReaderFactory.cpp  ReaderFactory.h  ReaderOptions.cpp  ReaderOptions.h
core/src/simd/: base.h  simd.h  targets.h  xsimd.h
core/src/type/: CMakeLists.txt  Conversions.cpp  Conversions.h  Subfield.h  Timestamp.cpp  Timestamp.h  TimestampConversion.cpp  TimestampConversion.h  base_operations.h  big_integer.cpp  big_integer.h  data_operations.h  data_type.h  data_type_serializer.cpp  data_type_serializer.h  data_types.h  data_utils.h  date32.cpp  date32.h  date_base.h  date_time_utils.h  decimal128.cpp  decimal128.h  decimal128_utils.h  decimal_base.h  decimal_operations.h  double_utils.h  integer256.cpp  integer256.h  string_Impl.h  string_ref.h  width_integer.h
core/src/util/: CMakeLists.txt  TimeUtils.cpp  TimeUtils.h  bit_array.h  bit_map.h  bit_util.h  bitmap_util.h  bits_selectivity_vector.h  (+25 more)
core/test/: CMakeLists.txt  omtest.cpp  split_reader_metadata_test.cpp
(+1993 files in other folders)
