if (DEFINED ENABLE_DT)
    if (${ENABLE_DT} STREQUAL "ON")
        message(STATUS "ENABLE_DT ON: enable -fsanitize=address -fsanitize=undefined -fsanitize-coverage=trace-pc")
        add_compile_options(-fprofile-arcs -ftest-coverage -fdump-rtl-expand)
    endif ()
endif ()

add_subdirectory(simd)
add_subdirectory(memory)
add_subdirectory(operator)
add_subdirectory(plannode)
add_subdirectory(util)
add_subdirectory(vector)
add_subdirectory(codegen)
add_subdirectory(expression)
add_subdirectory(type)
add_subdirectory(cpu_checker)
add_subdirectory(udf/cplusplus)
add_subdirectory(compute)

include_directories(/usr/lib/llvm-15/include)
