file(GLOB_RECURSE EXPRESSION_LIST ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
set(EXPRESSION_TARGET expression)
add_library(${EXPRESSION_TARGET} ${EXPRESSION_LIST})

file(GLOB EXPRESSION_HEAD_FILES ${SOURCE_ROOT}/src/expression/*.h)
install(FILES ${EXPRESSION_HEAD_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/expression)
file(GLOB PARSER_HEAD_FILES ${SOURCE_ROOT}/src/expression/parser/*.h)
install(FILES ${PARSER_HEAD_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/expression/parser)